Add CPU timeline plot to reporter
Generate a per-workflow PNG showing CPU cores in use over time during
DAG execution.  Uses the existing cpu_samples collected every 5s via
/proc/stat jiffies.  Plot includes allocated-cores reference line,
phase shading (processing/merge/cleanup), and R1→R2 replan marker
for adaptive workflows.  Graceful no-op if matplotlib is not installed.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dev = [
     "respx>=0.21.0",
     "ruff>=0.2.0",
     "mypy>=1.8.0",
+    "matplotlib>=3.8.0",
 ]
 
 [tool.hatch.build.targets.wheel]
